[gd_scene load_steps=2 format=3 uid="uid://d1s55yebmn1or"]

[ext_resource type="Script" uid="uid://cubwds2566vse" path="res://Scenes/Menus/SaveMenu.gd" id="1_j255f"]

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j255f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -7.0
offset_top = -7.0
offset_right = 1296.0
offset_bottom = 731.0
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="Slot1" type="Panel" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 224.0
offset_right = 1224.0
offset_bottom = 354.0

[node name="SaveButton1" type="Button" parent="Slot1"]
layout_mode = 0
offset_left = 246.0
offset_top = 2.0
offset_right = 700.0
offset_bottom = 127.0
text = "Save Game"

[node name="LoadButton1" type="Button" parent="Slot1"]
layout_mode = 0
offset_left = 708.0
offset_top = 3.0
offset_right = 1117.0
offset_bottom = 129.0
text = "Load Game"

[node name="Label" type="Label" parent="Slot1"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 26.0
scale = Vector2(1.26667, 1.28395)
text = "1."

[node name="Slot2" type="Panel" parent="."]
layout_mode = 0
offset_left = 107.0
offset_top = 380.0
offset_right = 1226.0
offset_bottom = 510.0

[node name="SaveButton2" type="Button" parent="Slot2"]
layout_mode = 0
offset_left = 246.0
offset_top = 2.0
offset_right = 700.0
offset_bottom = 127.0
text = "Save Game"

[node name="LoadButton2" type="Button" parent="Slot2"]
layout_mode = 0
offset_left = 708.0
offset_top = 3.0
offset_right = 1117.0
offset_bottom = 129.0
text = "Load Game"

[node name="Label" type="Label" parent="Slot2"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 26.0
scale = Vector2(1.26667, 1.28395)
text = "2."

[node name="Slot3" type="Panel" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 543.0
offset_right = 1224.0
offset_bottom = 673.0

[node name="SaveButton3" type="Button" parent="Slot3"]
layout_mode = 0
offset_left = 246.0
offset_top = 2.0
offset_right = 700.0
offset_bottom = 127.0
text = "Save Game"

[node name="LoadButton3" type="Button" parent="Slot3"]
layout_mode = 0
offset_left = 708.0
offset_top = 3.0
offset_right = 1117.0
offset_bottom = 129.0
text = "Load Game"

[node name="Label" type="Label" parent="Slot3"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 26.0
scale = Vector2(1.26667, 1.28395)
text = "3."

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 39.0
offset_right = 183.0
offset_bottom = 91.0
text = "Return"

[connection signal="pressed" from="Slot1/SaveButton1" to="." method="_on_save_button_1_pressed"]
[connection signal="pressed" from="Slot1/LoadButton1" to="." method="_on_load_button_1_pressed"]
[connection signal="pressed" from="Slot2/SaveButton2" to="." method="_on_save_button_2_pressed"]
[connection signal="pressed" from="Slot2/LoadButton2" to="." method="_on_load_button_2_pressed"]
[connection signal="pressed" from="Slot3/SaveButton3" to="." method="_on_save_button_3_pressed"]
[connection signal="pressed" from="Slot3/LoadButton3" to="." method="_on_load_button_3_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
